update login , register , logout , JWT
