# portfolio/resources/js/provider.js
@@ -4,6 +4,9 @@ const baseUrl = 'http://127.0.0.1:8000/api';
       return {
           getPhotoData : ''+baseUrl+'/getPhotoData',
           getFollowData : ''+baseUrl+'/getFollowData',
+          login : ''+baseUrl+'/login',
+          register : ''+baseUrl+'/register',
+          logout : ''+baseUrl+'/logout',
 
       }
 }
