# portfolio/routes/api.php
@@ -14,12 +14,15 @@ use Illuminate\Support\Facades\Route;
 |
 */
 
-//Route::post('/auth/login', [\App\Http\Controllers\Auth\AuthController::class, 'loginUser']);
-//Route::post('/auth/register', [\App\Http\Controllers\Auth\AuthController::class, 'register']);
-Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
+
+Route::middleware('auth:api')->get('/user', function (Request $request) {
     return $request->user();
 });
+
 // frontend data
+Route::post('/login', [\App\Http\Controllers\Auth\AuthUserController::class, 'login']);
+Route::post('/register', [\App\Http\Controllers\Auth\AuthUserController::class, 'register']);
+Route::post('/logout', [\App\Http\Controllers\Auth\AuthUserController::class, 'logout']);
 Route::get('/getPhotoData', [\App\Http\Controllers\Front\HomePageController::class, 'getImages']);
 Route::get('/getFollowData', [\App\Http\Controllers\Front\HomePageController::class, 'getFollows']);
 
